# OctFS

./: .gitignore  CMakeLists.txt  Readme.md
share/cmake/: compiler_flags.cmake  dependencies.cmake  directories.cmake  unused_makefile
share/cmake/modules/: Findmpi.cmake  Findp4est.cmake
share/files/: default.para
src/aux/: CMakeLists.txt
src/aux/include/aux/: minunit.h
src/aux/src/: bstrlib.c
src/solver/: CMakeLists.txt
src/solver/include/solver/: coarsen.h  dataIO.h  fluxConvection.h  gradients.h  linearSolver.h  massflux.h  paramfile.h  projection.h  quadData.h  refine.h  simData.h  solveTranEq.h  solver.h  timeIntegral.h  typedefs.h  util.h
src/solver/src/: coarsen.c  dataIO.c  fluxConvection.c  gradients.c  krylov.c  linearSolver.c  massflux.c  paramfile.c  projection.c  quadData.c  refine.c  simData.c  solveTranEq.c  solver.c  timeIntegral.c
src/solver/test/: solver_tests.c  solver_tests.h  unit_tests.c
